--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ venv/
 .venv/
 myenv/
 Llama/Llama-3.1-8B-Instruct-Phishing-Classification.i1-Q4_K_M.gguf
-bert-finetuned-phishing/saved_model/tf_model.h5
+#bert-finetuned-phishing/saved_model/tf_model.h5
